# happy-skills

./: .gitignore  CLAUDE.md  README.md  README_CN.md  README_EN.md  install.sh  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: analyze-feature.md  analyze-screenshot.md
.claude/skills/analyze-feature/: SKILL.md
.claude/skills/feature-analyzer/: SKILL.md
.claude/skills/screenshot-analyzer/: SKILL.md
cli/: __init__.py  main.py
cli/commands/: __init__.py  init.py  status.py  update.py
cli/core/: __init__.py  config.py  deployer.py
commands/git/: worktree-remove.md
docs/: PLUGIN_ARCHITECTURE_DESIGN.md  gsap-animation-skill-design.md  gsap-motion-patterns-research.md  gsap-video-pipeline-research.md
docs/plans/: 2026-01-01-simple-vad-design.md
skills/cover-image/references/: auto-selection.md  style-presets.md
skills/cover-image/references/dimensions/: font.md  text.md
skills/cover-image/references/palettes/: earth.md  pastel.md  vivid.md
skills/cover-image/references/renderings/: chalk.md  (+3 more)
skills/gsap-animation/: SKILL.md
skills/gsap-animation/rules/: plugin-guide.md  timing-conventions.md
skills/spring-animation/rules/: remotion-integration.md  timing-conventions.md  video-blueprints.md
skills/tts-skill/assets/: minimax_tts.py
skills/tts-skill/rules/: list-voices.md  setup.md  voice-design.md
skills/video-producer/: SKILL.md
skills/video-producer/rules/: narrative-templates.md  project-scaffold.md  scene-evaluator.md  scene-patterns.md  style-presets.md
tests/: test_init_modes.py
(+19 files in other folders)
