[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "happy-skills"
version = "1.0.0"
description = "CLI tool to deploy Claude Code configurations to any project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "notedit" }
]
keywords = ["claude", "ai", "cli", "development", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
hca = "cli.main:main"

[project.urls]
Homepage = "https://github.com/notedit/happy-skills"
Repository = "https://github.com/notedit/happy-skills"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
